# blackjack-protocols-project

./: README.md  cert  key  package.json  pnpm-lock.yaml
Backend/: .gitignore  package.json  pnpm-lock.yaml
Backend/src/: .env.example  mqtt.ts
Backend/src/api/: index.ts
Backend/src/api/middlewares/: authMiddleware.ts  logMiddleware.ts
Backend/src/api/routes/: auth.routes.ts  chats.routes.ts  games.routes.ts  users.routes.ts
Backend/src/db/: db.ts
Backend/src/db/schemas/: Chat.ts  Game.ts  User.ts  schemas.ts
Backend/src/interfaces/: Chat.model.ts  Envs.model.ts  Game.model.ts  User.model.ts  UserParams.model.ts  interfaces.ts
Frontend/: client.py  pyproject.toml
Frontend/src/: actions.py  auth.py  game.py  logged.py  mqtt.py  private_chat.py  public_chat.py  session.py
src/: .env  utils.ts
src/api/: index.ts
src/api/routes/: auth.routes.ts  games.routes.ts  users.routes.ts
src/classes/: Game.ts  User.ts
src/db/: db.ts
src/db/schemas/: schemas.ts
src/interfaces/: interfaces.ts
