[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Mateusz Kurowski <mateusz.kurowski28@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
paho-mqtt = "^1.6.1"
websockets = "^12.0"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
